--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,63 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-family: 'Roboto', sans-serif;
-    background: #ffffff;
+    color: var(--main-color)
 }
-
+:root {
+    --main-color: #434455;
+    --link-color: #2e2f42;
+}
+    
 ul {
     list-style-type: none;
 }
 
 /* site nav */
-.web {
+.link {
     color: var(--iris, #4D5AE5);
-    font-family: Raleway;
+    font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 800;
     line-height: 21px;
     letter-spacing: 0.54px;
     text-transform: uppercase;
+    line-height: 1.17
 }
-.studio-header {
+.link-header {
     color: var(--navyblue, #2E2F42);
-    font-family: Raleway;
+    font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 800;
     line-height: 21px;
     letter-spacing: 0.54px;
     text-transform: uppercase;
-}
-.navigation_list_item {
-    color: var(--navyblue, #2E2F42);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    line-height: 1.17
 }
 
-.navigation_list_item:focus {
-    color: var(--ocean, #404BBF);
+list {
+    list-style: none;
+}
+.list-navigation-item {
+    color: var(--link-color);
+    font-weight: 500
+    font-size: 16px
+    line-height: 1.5
+    letter-spacing: 0.02em
+    text-decoration: none
 }
 
-.navigation_list_item:hover {
-    color: var(--ocean, #404BBF);
+.list-navigation-item:focus {
+    color: var(--ocean, #404bbf);
+}
+
+.list-navigation-item:hover {
+    color: var(--ocean, #404bbf);
 }
 .adress_list_item {
     color: var(--slate, #434455);
+    font-style: normal
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
@@ -72,23 +84,13 @@ h1 {
 }
 
 .hero-button {
-    display: inline-flex;
-    padding: 16px 32px;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 4px;
     background: var(--iris, #4D5AE5);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .hero-button:hover {
-    border-radius: 4px;
     background: var(--ocean, #404BBF);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .hero-button:focus {
-    border-radius: 4px;
     background: var(--ocean, #404BBF);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .hero-button-text {
     color: var(--white, #FFF);
@@ -134,7 +136,7 @@ h2 {
     background: var(--navyblue, #2E2F42);
 }
 
-.studio-footer {
+.link-footer {
     color: var(--cloud, #F4F4FD);
     font-family: Raleway;
     font-size: 18px;
@@ -157,15 +159,12 @@ h2 {
 
 /* portfolio */
 .btn-tab-list {
-    border-radius: 4px;
     border: 1px solid var(--cornflower, #E7E9FC);
     background: var(--cloud, #F4F4FD);
 }
 
 .btn-tab-list:hover {
-    border-radius: 4px;
     background: var(--ocean, #404BBF);
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 }
 
 .button-text {
