--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,9 @@
 }
 
 body {
-    color: var(--main-color)
-    font-family:"Raleway", sans-serif;
-    font-family:"Roboto", sans-serif;
+    background-color: #FFFFFF;
+    font-family: 'Raleway', sans-serif;
+    font-family; 'Roboto', sans-serif;
 }
 
 ul {
@@ -20,7 +20,7 @@ ul {
 .link {
     text-decoration: none;
 }
-.logo-link {
+.logo-link-link {
     color: #4D5AE5;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
@@ -46,7 +46,7 @@ ul {
 .list {
     list-style: none;
 }
-.list-item a {
+.list-item {
     color: var(--link-color);
     font-weight: 500;
     font-size: 16px;
@@ -185,8 +185,8 @@ ul {
     color: var(--cloud, #F4F4FD);
     font-size: 16px;
     font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+    line-height: 24px;
+    letter-spacing: 0.32px;
 }
 
 /* portfolio */
