--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ ul {
 }
 
 .text-footer {
-    color: var(--cloud, #F4F4FD);
+    color: #f4f4fd;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
