--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,9 @@
     --contact-color: #434455;
 }
 
-body {
-    background-color: #FFFFFF;
+body.main {
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -46,7 +47,7 @@ ul {
     list-style: none;
 }
 .list-item {
-    color: var(--link-color);
+    color: #2e2f42;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -54,11 +55,11 @@ ul {
 }
 
 .list-item:focus {
-    color: var(--ocean, #404bbf);
+    color: #404bbf;
 }
 
 .list-item:hover {
-    color: var(--ocean, #404bbf);
+    color: #404bbf;
 }
 
 .address {
@@ -71,14 +72,14 @@ ul {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--main-color);
+    color: #434455;
 }
 
-.contact-link-link {
+.contact-link {
     text-decoration: none;
 }
-.contact-link-link:hover,
-.contact-link-link:focus {
+.contact-link:hover,
+.contact-link:focus {
     color: #404bbf;
 }
 
@@ -224,5 +225,4 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-
 }
