--- a/css/styles.css
+++ b/css/styles.css
@@ -44,19 +44,19 @@ ul {
 .list {
     list-style: none;
 }
-.list-item {
+.nav-link {
+    color: #2e2f42;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2e2f42;
 }
 
-.list-item:focus {
+.nav-link:focus {
     color: #404bbf;
 }
 
-.list-item:hover {
+.nav-link:hover {
     color: #404bbf;
 }
 
