--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,20 @@ ul {
 .list {
     list-style: none;
 }
+.list-item {
+    color: #2e2f42;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em; 
+}
+.list-item:hover {
+    color: #404bbf;
+}
+
+.list-item:focus{
+    color: #404bbf;
+}
 .nav-link {
     color: #2e2f42;
     font-weight: 500;
